--- a/hugo.toml
+++ b/hugo.toml
@@ -13,17 +13,17 @@ theme = "DoIt"
 
 
 [menu]
-  [[menu.main]]
-    identifier = "posts"
+  # [[menu.main]]
+    # identifier = "posts"
     # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
     pre = ""
     # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
-    post = ""
-    name = "文章"
-    url = "/posts/"
+    # post = ""
+    # name = "文章"
+    # url = "/posts/"
     # 当你将鼠标悬停在此菜单链接上时, 将显示的标题
-    title = ""
-    weight = 1
+    # title = ""
+    # weight = 1
   [[menu.main]]
     identifier = "tags"
     pre = ""
