--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/DoIt"]
   path = themes/DoIt
-  url = https://github.com/HEIGE-PCloud/DoIt.git
+  url = https://github.com/twaak/DoIt.git
