--- a/hugo.toml
+++ b/hugo.toml
@@ -307,7 +307,7 @@ optimizeImages = true
     #  是否使用 fraction 扩展语法
     fraction = true
     # 是否在文章页面显示原始 Markdown 文档链接
-    linkToMarkdown = true
+    linkToMarkdown = false
     #  配置文章原始文件的链接
     linkToSource = false
     # "https://github.com/user/repo/blob/main/{path}"
