--- a/hugo.toml
+++ b/hugo.toml
@@ -158,7 +158,7 @@ optimizeImages = true
     # ICP 备案信息, 仅在中国使用 (支持 HTML 格式)
     icp = ""
     # 许可协议信息 (支持 HTML 格式)
-    license = '<a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>'
+     license = '<a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">Go Forward</a>'
 
   #  Section (所有文章) 页面配置
   [params.section]
@@ -220,7 +220,7 @@ optimizeImages = true
 
   # 作者的社交信息设置
   [params.social]
-    GitHub = "soslane"
+    GitHub = "twaak"
     Linkedin = ""
     Twitter = "lanechow"
     Instagram = ""
@@ -331,7 +331,7 @@ optimizeImages = true
     enableReadingTime = true
     #  过时文章提示
     [params.page.outdatedArticleReminder]
-      enable = true
+      enable = false
       # 如果文章最后更新于 90 天之前，显示提醒
       reminder = 90
       # 如果文章最后更新于 180 天之前，显示警告
