--- a/hugo.toml
+++ b/hugo.toml
@@ -493,7 +493,7 @@ optimizeImages = true
         dark = false
       #  Commento 评论系统设置
       [params.page.comment.commento]
-        enable = true
+        enable = false
       #  Utterances 评论系统设置
       [params.page.comment.utterances]
         enable = false
