--- a/hugo.toml
+++ b/hugo.toml
@@ -129,7 +129,7 @@ optimizeImages = true
     #  页面头部导航栏标题配置
     [params.header.title]
       # LOGO 的 URL
-      logo = "https://img.myla.eu.org/file/c122c415501b7baf71154.png"
+      logo = "/"
       # 标题名称
       name = "Steven"
       # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
