--- a/hugo.toml
+++ b/hugo.toml
@@ -196,9 +196,9 @@ optimizeImages = true
       # 主页显示头像的 URL
       # 将你的头像文件放置于 static 或者 assets 目录下
       # 文件路径是相对于 static 或者 assets 目录的
-      avatarURL = "https://img.myla.eu.org/file/b66ad29d4963660f8f0d8.jpg"
+      avatarURL = "./"
       # 头像的链接指向的 URL
-      avatarLinkURL = "https://img.myla.eu.org/file/b66ad29d4963660f8f0d8.jpg"
+      avatarLinkURL = "https://twaak.github.io"
       #  主页显示的网站标题 (支持 HTML 格式)
       title = "Steven"
       # 主页显示的网站副标题
