--- a/hugo.toml
+++ b/hugo.toml
@@ -196,7 +196,7 @@ optimizeImages = true
       # 主页显示头像的 URL
       # 将你的头像文件放置于 static 或者 assets 目录下
       # 文件路径是相对于 static 或者 assets 目录的
-      avatarURL = "https://img.myla.eu.org/file/c122c415501b7baf71154.png"
+      avatarURL = "https://img.myla.eu.org/file/b66ad29d4963660f8f0d8.jpg"
       # 头像的链接指向的 URL
       avatarLinkURL = "https://twaak.github.io"
       #  主页显示的网站标题 (支持 HTML 格式)
