--- a/hugo.toml
+++ b/hugo.toml
@@ -198,7 +198,7 @@ optimizeImages = true
       # 文件路径是相对于 static 或者 assets 目录的
       avatarURL = "https://img.myla.eu.org/file/b66ad29d4963660f8f0d8.jpg"
       # 头像的链接指向的 URL
-      avatarLinkURL = "https://twaak.github.io"
+      avatarLinkURL = "/"
       #  主页显示的网站标题 (支持 HTML 格式)
       title = "Steven"
       # 主页显示的网站副标题
